# kodik

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.c  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: Vendor.cmake  vcpkg.cmake
resources/kodik/: resource.h  resource.rc
src/: CMakeLists.txt
src/include/: config.h.in
src/include/kodik/: exports.h  kodik.h  memory.h
src/include/kodik/api/: api.h  api_types.h  object.h
src/include/kodik/data/: country.h  genre.h  quality.h  translation.h  year.h
src/include/kodik/data/v2/: quality.h  translation.h
src/src/kodik/: memory.c
src/src/kodik/api/: api.c  object.c  ref_count.c
src/src/kodik/data/: country.c  genre.c  quality.c  translation.c  year.c
src/src/kodik/data/v2/: quality.c  translation.c
src/src/kodik/util/: util.h
tests/: CMakeLists.txt
tests/data/: country.json  genre.json  quality.json  translation.json  year.json
tests/data/v2/: quality.json  translation.json
tests/kodik/data/: country.c  genre.c  quality.c  translation.c  year.c
tests/kodik/data/v2/: quality.c  translation.c
